feat(sdk): deliver official automation platform