@@ -17,21 +17,23 @@
  */
 package com.soulfiremc.server.api;
 
+import com.soulfiremc.server.SoulFireServer;
 import com.soulfiremc.server.api.event.EventExceptionHandler;
 import com.soulfiremc.server.api.event.SoulFireEvent;
 import net.lenni0451.lambdaevents.LambdaManager;
 import net.lenni0451.lambdaevents.generator.ASMGenerator;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.Consumer;
 
 /// Holds all instances of plugins running in this JVM.
 /// The SoulFire server accesses this class on startup and advertises itself to all plugins.
 /// It also holds the event manager for all events in this JVM.
 public final class SoulFireAPI {
-  private static final List<Plugin> SERVER_EXTENSIONS = new ArrayList<>();
+  private static final List<Plugin> SERVER_EXTENSIONS = new CopyOnWriteArrayList<>();
+  private static final List<Plugin> ENABLED_EXTENSIONS = new CopyOnWriteArrayList<>();
+  private static final PluginApiRegistry PLUGIN_APIS = new PluginApiRegistry();
   private static final LambdaManager EVENT_BUS =
     LambdaManager.threadSafe(new ASMGenerator())
       .setAlwaysCallParents(true)
@@ -47,12 +49,50 @@ public final class SoulFireAPI {
 
   private SoulFireAPI() {}
 
-  public static void registerServerExtension(Plugin plugin) {
-    SERVER_EXTENSIONS.add(plugin);
+  public static void loadPlugin(Plugin plugin) {
+    if (!plugin.isAvailable()) {
+      return;
+    }
+
+    var context = PLUGIN_APIS.createContext(plugin.pluginInfo());
+    try {
+      plugin.onLoad(context);
+      registerListenersOfClass(plugin.getClass());
+      registerListenersOfObject(plugin);
+      SERVER_EXTENSIONS.add(plugin);
+    } catch (RuntimeException | Error t) {
+      PLUGIN_APIS.discard(plugin.pluginInfo().id());
+      throw t;
+    }
+  }
+
+  public static void enablePlugins(SoulFireServer server) {
+    var context = new ServerContext(server);
+    for (var plugin : SERVER_EXTENSIONS) {
+      plugin.onEnable(context);
+      ENABLED_EXTENSIONS.add(plugin);
+    }
+  }
+
+  public static void disablePlugins() {
+    for (var index = ENABLED_EXTENSIONS.size() - 1; index >= 0; index--) {
+      var plugin = ENABLED_EXTENSIONS.get(index);
+      try {
+        plugin.onDisable();
+      } finally {
+        unregisterListenersOfObject(plugin);
+        unregisterListenersOfClass(plugin.getClass());
+      }
+    }
+    ENABLED_EXTENSIONS.clear();
   }
 
   public static List<Plugin> getServerExtensions() {
-    return Collections.unmodifiableList(SERVER_EXTENSIONS);
+    return List.copyOf(SERVER_EXTENSIONS);
+  }
+
+  public static PluginApiRegistry pluginApis() {
+    return PLUGIN_APIS;
   }
 
   public static <E extends SoulFireEvent> void registerListener(Class<E> clazz, Consumer<E> consumer) {
